--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,7 @@
   header .container {
     justify-content: space-between;
     display: flex;
-    background-color: white;
+    //background-color: white;
   }
   header {
     //background-color: yellow;
@@ -39,6 +39,7 @@
   }
   img {
     border: 1px solid red;
+    max-width: 200px;
   }
 }
 
@@ -46,4 +47,24 @@
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+section.all {
+  padding: 3rem 0;
+  background-size: cover;
+  background-position: center;
+  .container {
+    display: flex;
+    & > .col {
+      flex: 1 1;
+    }
+  }
+
+  &.art-of-cakes {
+    background-image: url("../img/bg.png");
+    background-repeat: repeat;
+  }
+  &.pancakes {
+    background-image: url("../img/background-image-2.png");
+  }
 }
